# handlers/user_handler.go
@@ -37,12 +37,12 @@ func NewUserHandler(repo *repositories.UserRepository) *UserHandler {
 // @Accept json
 // @Produce json
 // @Param body body models.RegisterRequest true "Register Request"
-// @Success 201 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Failure 422 {object} map[string]interface{}
-// @Failure 500 {object} map[string]interface{}
+// @Success 201 {object} models.RegisterResponse "Created"
+// @Failure 400 {object} middleware.SpecificErrorResponse "Bad Request"
+// @Failure 422 {object} middleware.ErrorResponse "Unprocessable Entity"
+// @Failure 500 {object} middleware.ErrorResponse "Internal Server Error"
 // @Security BearerAuth
-// @Router /auth/register [post]
+// @Router /api/auth/register [post]
 func (h *UserHandler) Register(c *fiber.Ctx) error {
 	var req *models.RegisterRequest
 	if err := c.BodyParser(&req); err != nil {
@@ -138,12 +138,12 @@ func (h *UserHandler) Register(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param body body models.LoginRequest true "Login Request"
-// @Success 200 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Failure 401 {object} map[string]interface{}
-// @Failure 422 {object} map[string]interface{}
-// @Failure 500 {object} map[string]interface{}
-// @Router /auth/login [post]
+// @Success 200 {object} models.LoginResponse "OK"
+// @Failure 400 {object} middleware.SpecificErrorResponse "Bad Request"
+// @Failure 401 {object} middleware.ErrorResponse "Unauthorized"
+// @Failure 422 {object} middleware.ErrorResponse "Unprocessable Entity"
+// @Failure 500 {object} middleware.ErrorResponse "Internal Server Error"
+// @Router /api/auth/login [post]
 func (h *UserHandler) Login(c *fiber.Ctx) error {
 	var req *models.LoginRequest
 	if err := c.BodyParser(&req); err != nil {
@@ -202,7 +202,9 @@ func (h *UserHandler) Login(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusInternalServerError, "Server error")
 	}
 
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"token": signedToken, // Token sudah termasuk data claims user
-	})
+	loginResponse := models.LoginResponse{
+		Token: signedToken,
+	}
+
+	return c.Status(fiber.StatusOK).JSON(loginResponse)
 }
