# models/user.go
@@ -30,3 +30,7 @@ type LoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
